# data-agent

./: .gitignore  pyproject.toml
app/clients/: embedding_client_manager.py  es_client_manager.py  mysql_client_manager.py  qdrant_client_manager.py
app/conf/: text_config.py
app/core/: context.py  log.py
app/repositories/es/: value_es_repository.py
app/repositories/msyql/: dw_mysql_repository.py  meta_mysql_repository.py
app/repositories/qdrant/: column_qdrant_repository.py
app/scripts/: build_meta_knowledge.py
app/services/: meta_knowledge_service.py
conf/: app_config.yaml  text_config.yaml
